--- a/app/src/main/res/drawable-night/ic_launcher_background_retro_summer.xml
+++ b/app/src/main/res/drawable-night/ic_launcher_background_retro_summer.xml
@@ -5,15 +5,15 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     
-    <!-- Background - Sea Cottage theme colors -->
-    <!-- Light theme: Mint background -->
+    <!-- Background - Retro Summer theme colors -->
+    <!-- Dark theme: Darker orange-red background -->
     <path
-        android:fillColor="#E8E9FF"
+        android:fillColor="@color/icon_retro_summer_accent"
         android:pathData="M0,0h108v108h-108z" />
     
     <!-- Subtle gradient overlay for depth -->
     <path
-        android:fillColor="#77E4C8"
-        android:alpha="0.2"
+        android:fillColor="@color/icon_retro_summer_depth_very_dark"
+        android:alpha="0.3"
         android:pathData="M0,0h108v54h-108z" />
 </vector>
